--- a/Criando-uma-Lista-de-tarefas/assets/css/style.css
+++ b/Criando-uma-Lista-de-tarefas/assets/css/style.css
@@ -74,3 +74,9 @@ button {
 button:hover {
   background: var(--primary-color-darker);
 }
+
+
+/* utilitis */
+.inputiInvalid {
+  border-color: red;
+}
