--- a/exercicio-funções/assets/css/style.css
+++ b/exercicio-funções/assets/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 :root {
   --primary-color: rgb(17, 86, 102);
   --primary-color-darker: rgb(9, 48, 56);
@@ -9,7 +8,7 @@
   outline: 0;
   margin: 0;
   padding: 0;
-  font-family: 'Open sans', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html {
@@ -69,6 +68,7 @@ input:focus {
   height: auto;
 
   display: grid;
+  gap: 0.5rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-items: center;
   align-items: center;
@@ -80,7 +80,6 @@ input:focus {
 
   background-color: #80808074;
   border-radius: 0.2rem;
-  border: 0.1rem solid black;
   cursor: pointer;
 
   display: flex;
