--- a/exercicio-funções/assets/css/style.css
+++ b/exercicio-funções/assets/css/style.css
@@ -46,6 +46,10 @@ body {
   width: 100%;
 }
 
+input:disabled {
+  color: black;
+}
+
 input {
   background-color: #80808074;
   border: 0.1rem solid black;
@@ -54,7 +58,8 @@ input {
   width: 100%;
   margin-bottom: 2rem;
 
-  font-size: 2.4rem;
+  letter-spacing: 0.5rem;
+  font-size: 3rem;
   height: 5rem;
   padding: 0 2rem;
 }
@@ -88,6 +93,10 @@ input:focus {
 
   font-size: 3rem;
   transition: all 0.1s ease-in;
+}
+
+.operators {
+  background-color: gray;
 }
 
 .character:hover {
